Fix z-index of suggestions
Former-commit-id: 98c70bbe641f544eb1f4006970beead9fcddaf7c

--- a/src/angular-app/languageforge/translate/editor/_editor.scss
+++ b/src/angular-app/languageforge/translate/editor/_editor.scss
@@ -97,7 +97,7 @@ ng-quill-editor .ql-editor.drop-box {
     color: #373a3c;
     padding: 0.2rem;
     position: absolute;
-    z-index: $zindex-tooltip;
+    z-index: $zindex-dropdown;
 }
 
 .ql-suggest-tooltip-arrow {
